--- a/app/src/main/res/layout/fragment_show_contents.xml
+++ b/app/src/main/res/layout/fragment_show_contents.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:id="@+id/show_contents_fragment">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/check_line"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/control_buttons"/>
 
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/control_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,7 +44,7 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/edit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,7 +52,7 @@
             android:src="@drawable/ic_add"
             android:contentDescription="@string/add" />
 
-        <ImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/delete_check_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,6 +60,6 @@
             android:src="@drawable/ic_delete"
             android:contentDescription="@string/delete" />
 
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
