--- a/app/src/main/res/layout/show_title.xml
+++ b/app/src/main/res/layout/show_title.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,7 +8,7 @@
     android:elevation="4dp"
     android:orientation="horizontal">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title"
         android:layout_weight="1"
         android:gravity="center"
@@ -20,11 +20,11 @@
         android:text="@string/title"
         android:focusable="true" />
 
-    <ImageButton
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_delete_title"
         android:contentDescription="@string/delete" />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
