--- a/app/src/main/res/layout/checklist_column.xml
+++ b/app/src/main/res/layout/checklist_column.xml
@@ -38,6 +38,7 @@
             android:background="#00000000"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
+            android:inputType="text"
             android:text="@={value.item}"
             android:textSize="30sp"
             android:autofillHints=""
